<?xml version="1.0" encoding="utf-8"?>
<com.trifork.ckp.namequiz.result.ResultLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/screenResult"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
...
        android:layout_below="@id/text_result_headline"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/screen_vertical_margin"
        />

    <ListView
        android:id="@+id/checklist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/text_result_score"
        android:layout_above="@+id/result_button"
        android:layout_marginBottom="@dimen/screen_vertical_margin"/>

...
