<?xml version="1.0" encoding="utf-8"?>
<com.trifork.ckp.namequiz.quiz.QuizLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/screenQuiz"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/quizContentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_question_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/screen_vertical_margin"
            />

        <com.trifork.ckp.namequiz.util.NonSwipeableViewPager
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/question_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/text_question_number"
            android:layout_above="@+id/button_next"
            />

        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_screen_button_text_next"
            android:layout_alignParentBottom="true"
            android:background="@drawable/app_btn"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:enabled="false"
            />

    </RelativeLayout>

    <include layout="@layout/loading_view" />
    <include layout="@layout/error_view" />

</com.trifork.ckp.namequiz.quiz.QuizLayout>