...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow>
                    <Button
                        android:id="@+id/option_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="James"
                        android:layout_gravity="center"
                        android:background="@drawable/question_btn"
...
